public/cms.css
/* ... */
:where(a:not([role=button])), [role=link],
:where(a:not([role=button]):visited), [role=link]:visited {
    --pico-color: var(--pico-contrast);
    --pico-underline: var(--pico-contrast);
}

:where(a:not([role=button]):hover), [role=link]:hover {
    --pico-color: var(--pico-contrast-hover);
    --pico-underline: var(--pico-contrast-hover);
}

nav ol:first-of-type, nav ul:first-of-type,
nav ol:last-of-type, nav ul:last-of-type {
    margin: 0;
}

nav li :where(a,[role=link]) {
    color: var(--pico-color);
    text-decoration: none;
}

body > header {
    max-width: 1200px;
    margin: auto;
}

header nav ol,
header nav ul {
    margin-top: 0;
}

header nav > ul:not(.menu) > li {
    padding: var(--pico-nav-element-spacing-vertical) 0;
}

header nav details summary {
    display: flex;
    list-style: none;
    cursor: pointer;
}

header nav details summary::marker,
header nav details summary::-webkit-details-marker {
    display: none;
}

header nav details summary::after {
    display: block;
    float: right;
    width: 1.5rem;
    height: calc(1rem * var(--pico-line-height, 1.5));
    transform: rotate(0) translateX(.2rem);
    background-image: var(--pico-icon-chevron);
    background-position: right center;
    background-repeat: no-repeat;
    background-size: 1rem auto;
    margin-inline-start: .25rem;
    content: "";
}

header nav details[open] summary::after {
    transform: rotate(0.5turn) translateX(0);
}

header nav details.dropdown > summary + ul.align {
    left: auto;
    right: 0;
}

[dir="rtl"] header nav details.dropdown > summary + ul.align {
    right: auto;
    left: 0;
}

header nav .brand {
    flex-grow: 1;
}

header nav .brand a,
header nav .brand img {
    display: flex;
    align-items: center;
    height: 60px;
    padding: 0;
    margin: 0;
}

header nav .menu {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    max-width: 100%;
}

header nav .menu-open,
header nav .menu-close,
header nav .sidebar-open,
header nav .sidebar-close {
    display: none;
}

header nav .menu-open button,
header nav .menu-close button,
header nav .sidebar-open button,
header nav .sidebar-close button {
    color: var(--pico-contrast);
    padding: 0.75rem;
    background: none;
    border: none;
}

header nav a {
    display: inline-block;
    text-decoration: none;
    color: var(--pico-color);
    padding: 0.25rem 1rem;
    margin-inline-start: -1rem;
}

@media (max-width: 991px) {
    header nav .menu-open.show,
    header nav .menu-close.show {
        display: flex;
    }

    header nav.small {
        display: block;
        overflow-y: auto;
        position: absolute;
        background-color: var(--pico-background-color);
        min-height: 100%;
        z-index: 1000;
        width: 100%;
    }

    header nav .menu {
        display: none;
    }

    header nav.small .menu {
        flex-direction: column;
        display: flex;
    }

    header nav .menu ul {
        display: block;
    }

    header nav .menu li {
        padding: 0.75rem 2rem;
        width: 100%;
    }
}

@media (max-width: 991px) {
    body > header > nav {
        padding: 0 1rem;
    }
}

nav[aria-label="breadcrumb"] {
    border: 1px solid var(--pico-muted-border-color);
    background-color: var(--pico-muted-background-color);
}

nav[aria-label="breadcrumb"] > ul {
    text-align: center;
    max-width: 1200px;
    margin: auto;
    width: 100%;
}

nav[aria-label=breadcrumb] ul li {
    justify-content: flex-end;
    align-items: center;
    display: flex;
}

nav[aria-label=breadcrumb] ul li:not(:first-child) {
    margin-inline-start: 0;
}

nav[aria-label=breadcrumb] ul li:not(:last-child)::after {
    color: var(--pico-color);
    width: auto;
}


dialog > article {
    background-color: var(--pico-background-color);
    height: calc(100vh - 2rem);
    overflow: unset;
}

dialog header {
    background-color: var(--pico-contrast-background);
}

dialog form {
    display: flex;
    padding: 1rem;
}

dialog input,
dialog button {
    background-color: var(--pico-background-color);
    color: var(--pico-contrast);
    appearance: none;
    box-shadow: none;
    border: none;
    padding: 0.5rem;
}

dialog input {
    border: 1px solid var(--pico-contrast-border);
    background-color: var(--pico-contrast-background);
    font-size: 1rem;
    display: block;
    width: 100%;
    margin: 0 1px;
    outline: none;
}

dialog input:focus-visible {
    border: 1px solid var(--pico-contrast-hover-border);
}

dialog input::-webkit-input-placeholder {
    color: var(--pico-muted-color);
}

dialog.search .results {
    height: calc(100% - 4.25rem);
    overflow-y: auto;
    padding: 1rem;
}

dialog.search a.result-item {
    border-inline-start: 1px solid var(--pico-contrast-border);
    color: var(--pico-color);
    text-decoration: none;
    cursor: pointer;
    display: block;
    padding: 0.5rem;
    padding-inline-start: 1rem;
    margin-bottom: 0.5rem;
}

dialog.search a.result-item:hover {
    --pico-color: var(--pico-contrast);
    background-color: var(--pico-contrast-background);
    color: var(--pico-contrast);
}

dialog.search .result-title {
    border-bottom: 1px solid var(--pico-contrast-border);
    display: block;
    font-weight: bold;
    padding-bottom: 0.25rem;
    margin-bottom: 0.25rem;
}

dialog.search .result-content {
    display: block;
}

dialog.search .result-content b {
    background-color: var(--pico-contrast-background);
    padding: 0.1rem 0.25rem;
}

dialog.search .load-more {
    background-color: var(--pico-contrast-background);
    color: var(--pico-contrast);
    border: 1px solid var(--pico-contrast-border);
    cursor: pointer;
    display: block;
    font-size: 1rem;
    margin: 1rem auto;
    padding: 0.5rem 1.5rem;
}

dialog.search .load-more:hover {
    background-color: var(--pico-contrast-hover-background);
}

dialog.search .load-more:disabled {
    opacity: 0.5;
    cursor: wait;
}
/* ... */

